--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,23 @@
 
 # dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+.nyc_output
+/test-results/
+/playwright-report/
+/playwright/.cache/
+__snapshots__/
+*.spec.js.snap
+*.test.js.snap
+/tests/__coverage__/
+.vitest-cache/
+.vitest-result/
+junit.xml
+coverage.json
 
 # next.js
 /.next/
@@ -9,15 +26,29 @@
 
 # production
 /build
+/dist
+
+# misc
+.DS_Store
+*.pem
+.idea/
+.vscode/
+*.swp
+*.swo
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
 
-# env files
-.env*
+# local env files
+.env*.local
+.env
+.env.development
+.env.test
+.env.production
 
 # vercel
 .vercel
@@ -25,3 +56,11 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# cache
+.cache/
+.eslintcache
+.stylelintcache
+
+# Vitest
+/vitest.config.ts.timestamp*
