--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
         "dev": "next dev --turbopack",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "test": "vitest",
+        "test:coverage": "vitest run --coverage"
     },
     "dependencies": {
         "@google/generative-ai": "latest",
@@ -63,12 +65,18 @@
         "zod": "^3.25.71"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^6.8.0",
+        "@testing-library/react": "^16.3.0",
+        "@testing-library/user-event": "^14.6.1",
         "@types/node": "^22",
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
+        "@vitest/ui": "^3.2.4",
+        "happy-dom": "^18.0.1",
         "postcss": "^8.5",
         "tailwindcss": "^3.4.17",
-        "typescript": "^5"
+        "typescript": "^5",
+        "vitest": "^3.2.4"
     },
     "overrides": {
         "@types/react": "19.1.8",
