--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
         "test": "vitest",
         "test:once": "vitest run",
         "test:coverage": "vitest run --coverage",
-    "mcp": "node mcp-server.js",
-    "check:urls": "node scripts/check-resource-urls.cjs"
+        "mcp": "node mcp-server.js",
+        "check:urls": "node scripts/check-resource-urls.cjs"
     },
     "dependencies": {
         "@google/generative-ai": "latest",
@@ -55,7 +55,6 @@
         "fuse.js": "^7.1.0",
         "input-otp": "^1.4.1",
         "lucide-react": "^0.454.0",
-        "next": "15.3.3",
         "next-themes": "^0.4.6",
         "react": "^18.3.1",
         "react-day-picker": "^9.7.0",
@@ -70,16 +69,26 @@
         "zod": "^3.25.71"
     },
     "devDependencies": {
+        "@babel/preset-env": "^7.28.3",
+        "@babel/preset-react": "^7.27.1",
+        "@babel/preset-typescript": "^7.27.1",
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
+        "@types/jest": "^30.0.0",
         "@types/node": "^22",
         "@types/react": "19.1.8",
         "@types/react-dom": "19.1.6",
         "@vitest/ui": "^3.2.4",
+        "babel-jest": "^30.1.2",
         "happy-dom": "^18.0.1",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^30.1.3",
+        "jest-environment-jsdom": "^30.1.2",
+        "next": "^15.5.3",
         "postcss": "^8.5",
         "tailwindcss": "^3.4.17",
+        "ts-jest": "^29.4.4",
         "typescript": "^5",
         "vitest": "^3.2.4"
     },
