--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "next dev --turbopack",
+        "dev": "next dev",
         "build": "next build",
         "build:static": "next build",
         "start": "next start",
@@ -86,7 +86,7 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^30.1.3",
         "jest-environment-jsdom": "^30.1.2",
-        "next": "^15.5.3",
+        "next": "^14.2.18",
         "postcss": "^8.5",
         "tailwindcss": "^3.4.17",
         "ts-jest": "^29.4.4",
