refactor: move MCP files to /tools/mcp directory
Step 4/12: Organize MCP development tools
- Move mcp-server.js to tools/mcp/
- Move mcp-search.js to tools/mcp/
- Move cline_mcp_settings.json to tools/mcp/
- Update package.json mcp script path

Build tested:  Passes
Search tested:  Working

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "vitest",
     "test:once": "vitest run",
     "test:coverage": "vitest run --coverage",
-    "mcp": "node mcp-server.js",
+    "mcp": "node tools/mcp/mcp-server.js",
     "check:urls": "node scripts/check-resource-urls.cjs"
   },
   "dependencies": {
