--- a/tools/mcp/cline_mcp_settings.json
+++ b/tools/mcp/cline_mcp_settings.json
@@ -2,8 +2,8 @@
   "mcpServers": {
     "library-search": {
       "command": "node",
-      "args": ["mcp-server.js"],
-      "cwd": "C:/Users/milesm/Documents/repos/vercel-dbsearch-hn"
+      "args": ["tools/mcp/mcp-server.js"],
+      "cwd": "C:/Users/milesm/Documents/repos/vercel2/vercel-dbsearch-hn"
     }
   }
 }
