--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@
 
 # Gemini API Key for AI-powered search
 GEMINI_API_KEY=your_gemini_api_key_here
+GROQ_API_KEY=your_groq_api_key_here
+HF_TOKEN=your_huggingface_token_here
